docs/v5.3.0/_sources/gallery/experiment/index.rst.txt
:orphan:

.. _experiment_index:

Experiment Module
=================

The ``experiment`` package is used to build large parameter sweeps.  It lets you
combine sources, scatterers and detectors to explore how scattering quantities
change across many configurations.

.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>

Core-Shell
~~~~~~~~~~
Examples of particles composed of a core and shell.


.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute and visualize the backscattering efficiency (Qback) as functions of core diameter for CoreShell scatterers using PyMieSim.">

.. only:: html

  .. image:: /gallery/experiment/coreshell/images/thumb/sphx_glr_coreshell_Qback_vs_corediameter_thumb.png
    :alt:

  :doc:`/gallery/experiment/coreshell/coreshell_Qback_vs_corediameter`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">CoreShell: Qback vs Core Diameter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute and visualize the coupling efficiency as a function of core diameter for CoreShell scatterers using PyMieSim.">

.. only:: html

  .. image:: /gallery/experiment/coreshell/images/thumb/sphx_glr_coreshell_coupling_vs_corediameter_thumb.png
    :alt:

  :doc:`/gallery/experiment/coreshell/coreshell_coupling_vs_corediameter`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">CoreShell: Coupling vs Diameter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute and visualize the coupling efficiency as a function of core diameter for CoreShell scatterers using PyMieSim.">

.. only:: html

  .. image:: /gallery/experiment/coreshell/images/thumb/sphx_glr_coreshell_coupling_vs_na_cache_thumb.png
    :alt:

  :doc:`/gallery/experiment/coreshell/coreshell_coupling_vs_na_cache`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">CoreShell: Coupling vs Diameter</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Cylinder
~~~~~~~~
Examples demonstrating infinite cylindrical scatterers.


.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute and visualize the scattering efficiency (Qsca) as a function of diameter for cylindrical scatterers using PyMieSim.">

.. only:: html

  .. image:: /gallery/experiment/cylinder/images/thumb/sphx_glr_cylinder_Qabs_vs_diameter_thumb.png
    :alt:

  :doc:`/gallery/experiment/cylinder/cylinder_Qabs_vs_diameter`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">InfiniteCylinder: Qabs vs Diameter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute and visualize the scattering efficiency (Qsca) as a function of diameter for cylindrical scatterers using PyMieSim, considering multiple wavelengths.">

.. only:: html

  .. image:: /gallery/experiment/cylinder/images/thumb/sphx_glr_cylinder_Qsca_vs_diameter_thumb.png
    :alt:

  :doc:`/gallery/experiment/cylinder/cylinder_Qsca_vs_diameter`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">InfiniteCylinder: Qsca vs Diameter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute and visualize the scattering efficiency (Qsca) as a function of refractive index for cylindrical scatterers using PyMieSim, considering multiple wavelengths.">

.. only:: html

  .. image:: /gallery/experiment/cylinder/images/thumb/sphx_glr_cylinder_Qsca_vs_index_thumb.png
    :alt:

  :doc:`/gallery/experiment/cylinder/cylinder_Qsca_vs_index`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">InfiniteCylinder: Qsca vs Index</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute and visualize the scattering efficiency (Qsca) as a function of wavelength for cylindrical scatterers using PyMieSim, considering cylinders with different diameters and refractive indices.">

.. only:: html

  .. image:: /gallery/experiment/cylinder/images/thumb/sphx_glr_cylinder_Qsca_vs_wavelength_thumb.png
    :alt:

  :doc:`/gallery/experiment/cylinder/cylinder_Qsca_vs_wavelength`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">InfiniteCylinder: Qsca vs Wavelength</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="InfiniteCylinder: Qsca vs wavelength std">

.. only:: html

  .. image:: /gallery/experiment/cylinder/images/thumb/sphx_glr_cylinder_Qsca_vs_wavelength_std_thumb.png
    :alt:

  :doc:`/gallery/experiment/cylinder/cylinder_Qsca_vs_wavelength_std`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">InfiniteCylinder: Qsca vs wavelength std</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute and visualize the coupling efficiency as a function of diameter for cylindrical scatterers using PyMieSim.">

.. only:: html

  .. image:: /gallery/experiment/cylinder/images/thumb/sphx_glr_cylinder_coupling_vs_diameter_thumb.png
    :alt:

  :doc:`/gallery/experiment/cylinder/cylinder_coupling_vs_diameter`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">InfiniteCylinder: Coupling vs Diameter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to use a goniometer setup to measure and visualize the coupling efficiency as a function of angular displacement for cylindrical scatterers using PyMieSim.">

.. only:: html

  .. image:: /gallery/experiment/cylinder/images/thumb/sphx_glr_cylinder_coupling_vs_phioffset_thumb.png
    :alt:

  :doc:`/gallery/experiment/cylinder/cylinder_coupling_vs_phioffset`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">InfiniteCylinder: Goniometer</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute and visualize the coupling efficiency as a function of wavelength for cylindrical scatterers using PyMieSim.">

.. only:: html

  .. image:: /gallery/experiment/cylinder/images/thumb/sphx_glr_cylinder_coupling_vs_wavelength_thumb.png
    :alt:

  :doc:`/gallery/experiment/cylinder/cylinder_coupling_vs_wavelength`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">InfiniteCylinder: Coupling vs Wavelength</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Sphere
~~~~~~
Examples focused on spherical scatterers.


.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Average isolated-sphere cross sections over a lognormal number distribution. This is the non-interacting approximation: no interparticle electromagnetic coupling, multiple scattering, positional correlations, or interference between particles is modeled. The result is a mean per particle, not a sample total.">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_independent_size_distribution_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/independent_size_distribution`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Size distribution: independent scattering only</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Number-based size populations averaged in the non-interacting approximation. No interparticle coupling, multiple scattering, or interparticle interference is included. Refer to PackLab for correlation-based dependent-scattering approximations when particle correlations matter.">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_size_distribution_families_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/size_distribution_families`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compare size distribution families</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compare lognormal number distributions at the same median diameter. The right panel shows the unpolarized phase function per unit solid angle, normalized so its integral over the sphere is one. Intensities are averaged before normalization; averaging complex amplitudes or equally weighted normalized single-particle phase functions would give a different result.">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_size_distribution_phase_function_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/size_distribution_phase_function`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">How distribution width changes the scattering phase function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Qabs vs diameter">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_sphere_Qabs_vs_diameter_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/sphere_Qabs_vs_diameter`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Qabs vs diameter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Qsca vs diameter">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_sphere_Qsca_vs_diameter_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/sphere_Qsca_vs_diameter`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Qsca vs diameter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Qsca vs index">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_sphere_Qsca_vs_index_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/sphere_Qsca_vs_index`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Qsca vs index</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Qsca vs wavelength">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_sphere_Qsca_vs_wavelength_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/sphere_Qsca_vs_wavelength`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Qsca vs wavelength</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Qsca vs wavelength STD">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_sphere_Qsca_vs_wavelength_std_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/sphere_Qsca_vs_wavelength_std`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Qsca vs wavelength STD</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Coherent Goniometer">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_sphere_coherent_coupling_vs_phioffset_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/sphere_coherent_coupling_vs_phioffset`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Coherent Goniometer</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Coherent mode field rotation">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_sphere_coherent_coupling_vs_rotation_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/sphere_coherent_coupling_vs_rotation`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Coherent mode field rotation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: coherent coupling vs sampling">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_sphere_coherent_coupling_vs_sampling_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/sphere_coherent_coupling_vs_sampling`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: coherent coupling vs sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Coupling vs diameter">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_sphere_coupling_vs_diameter_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/sphere_coupling_vs_diameter`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Coupling vs diameter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Coupling vs polarization filter">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_sphere_coupling_vs_filter_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/sphere_coupling_vs_filter`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Coupling vs polarization filter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Goniometer">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_sphere_coupling_vs_phioffset_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/sphere_coupling_vs_phioffset`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Goniometer</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Coupling vs sampling">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_sphere_coupling_vs_sampling_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/sphere_coupling_vs_sampling`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Coupling vs sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sphere: Coupling vs wavelength">

.. only:: html

  .. image:: /gallery/experiment/sphere/images/thumb/sphx_glr_sphere_coupling_vs_wavelength_thumb.png
    :alt:

  :doc:`/gallery/experiment/sphere/sphere_coupling_vs_wavelength`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sphere: Coupling vs wavelength</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /gallery/experiment/coreshell/index.rst
   /gallery/experiment/cylinder/index.rst
   /gallery/experiment/sphere/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
